--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <title>Shopify-Landig page</title>
 </head>
 <body>
-    
+    <main>
+        <div id="Conteiner-principale">
+            <div id="Conteiner-1content">
+                <span id="Logo"><img src="img/Logo-shopify.png" alt=""></span>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
