--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div id="Conteiner-principale">
             <div id="Conteiner-1content">
                 <span id="Logo"><img src="img/Logo-shopify.png" alt=""></span>
+                <h1>Crea il negozio dei tuoi sogni. Approfitta di uno sconto fino a 97% per 3 mesi</h1>
+                <p>Inizia al meglio e cresci su basi solide. Per un periodo limitato, risparmia sottoscrivendo alcuni piani selezionati. Offerta valida fino al 07/21.</p>
             </div>
         </div>
     </main>
