--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 <body>
     <main>
         <div id="Conteiner-principale">
+            <!-- ------------Content 1-------- -->
             <div id="Conteiner-1content">
                 <span id="Logo"><img src="img/Logo-shopify.png" alt=""></span>
                 <h1>Crea il negozio dei tuoi sogni. Approfitta di uno sconto fino a 97% per 3 mesi</h1>
                 <p>Inizia al meglio e cresci su basi solide. Per un periodo limitato, risparmia sottoscrivendo alcuni piani selezionati. Offerta valida fino al 07/21.</p>
+            </div>
+            <!-- ------------Content 1 FINE-------- -->
+
+            <div id="Conteiner-2content">
+                <span id="Bottone1"><input type="email" name="" placeholder="Inserisci la tua email"></span>
+                <span id="Bottone2"><input type="submit" name="" value="Inizia la tua prova gratuita" ></span>
             </div>
         </div>
     </main>
