--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div id="Conteiner-2content">
                 <span id="Bottone1"><input type="email" name="" placeholder="Inserisci la tua email"></span>
                 <span id="Bottone2"><input type="submit" name="" value="Inizia la tua prova gratuita" ></span>
+                <p>Prova gratuita di 14 giorni. Nessuna carta di credito necessaria. Puoi riscattare l’offerta dopo aver creato il tuo negozio. Inserendo la tua email, accetti di ricevere comunicazioni di marketing da Shopify. <a href="">Vedi termini e condizioni.</a></p>
             </div>
         </div>
     </main>
