--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
                 <p>Inizia al meglio e cresci su basi solide. Per un periodo limitato, risparmia sottoscrivendo alcuni piani selezionati. Offerta valida fino al 07/21.</p>
             </div>
             <!-- ------------Content 1 FINE-------- -->
-
+            
+            <!-- ------------Content 2-------- -->
             <div id="Conteiner-2content">
                 <span id="Bottone1"><input type="email" name="" placeholder="Inserisci la tua email"></span>
                 <span id="Bottone2"><input type="submit" name="" value="Inizia la tua prova gratuita" ></span>
                 <p>Prova gratuita di 14 giorni. Nessuna carta di credito necessaria. Puoi riscattare l’offerta dopo aver creato il tuo negozio. Inserendo la tua email, accetti di ricevere comunicazioni di marketing da Shopify. <a href="">Vedi termini e condizioni.</a></p>
             </div>
+            <!-- ------------Content 2-------- -->
+
+            <div id="Conteiner-3content"></div>
+            <div id="Conteiner-4content"></div>
+
         </div>
     </main>
 </body>
