--- a/index.html
+++ b/index.html
@@ -29,8 +29,29 @@
             </div>
             <!-- ------------Content 2-------- -->
 
-            <div id="Conteiner-3content"></div>
-            <div id="Conteiner-4content"></div>
+            <div id="Sfondo1"></div>
+            <div id="Conteiner-4content">
+                <div class="Elementi">
+                    <div id="pc"> <img src="img/pc.png" alt=""></div>
+                <h4>Facile da usare</h4>
+                <p>Non serve essere un mago del computer. Temi pronti all'uso con design per ogni gusto, personalizzabili in pochi clic.</p>
+                </div>
+
+
+                <div class="Elementi">
+                    <div id="pc"> <img src="img/soldi.png" alt=""></div>
+                <h4>Da 21 € al mese</h4>
+                <p>Che tu sia all'inizio della tua avventura o un business già avviato, abbiamo la soluzione adatta a te.</p>
+                </div>
+
+
+                <div class="Elementi">
+                    <div id="pc"> <img src="img/persone.png" alt=""></div>
+                <h4>Migliaia di negozi in Italia</h4>
+                <p>Tantissimi negozi italiani si affidano a Shopify per avviare, gestire e far crescere il proprio business.</p>
+                </div>
+                
+            </div>
 
         </div>
     </main>
