--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                 <span id="Bottone2"><input type="submit" name="" value="Inizia la tua prova gratuita" ></span>
                 <p>Prova gratuita di 14 giorni. Nessuna carta di credito necessaria. Puoi riscattare l’offerta dopo aver creato il tuo negozio. Inserendo la tua email, accetti di ricevere comunicazioni di marketing da Shopify. <a href="">Vedi termini e condizioni.</a></p>
             </div>
-            <!-- ------------Content 2-------- -->
+            <!-- ------------Content 2 FINE-------- -->
 
+
+            <!-- ------------Content 3-------- -->
             <div id="Sfondo1"></div>
-            <div id="Conteiner-4content">
+            <div id="Conteiner-3content">
                 <div class="Elementi">
                     <div id="pc"> <img src="img/pc.png" alt=""></div>
                 <h4>Facile da usare</h4>
@@ -52,7 +54,23 @@
                 </div>
                 
             </div>
+            <!-- ------------Content 3 FINE-------- --> 
+           
+            <!-- ------------Content 4 -------- -->
+            <div id="Conteiner-4content">
+                <img src="img/primo-logo.png" alt="">
+                <img src="img/secondo-logo.png" alt="">
+                <img src="img/terzo-logo.png" alt="">
+                <img src="img/quarto-logo.png" alt="">
+                <img src="img/quinto-logo.png" alt="">
+                <img src="img/sesto-logo.png" alt="">
+                <img src="img/settimo-logo.png" alt="">
+                <img src="img/ottavo-logo.png" alt="">
+                <img src="img/nono-logo.png" alt="">
+            </div>
+             <!-- ------------Content 4 FINE -------- -->
 
+             <div id="Conteiner-4content"></div>
         </div>
     </main>
 </body>
