posizionamento container footer

--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
 
                 <p>CLIO ZAMMATTEO, CLIOMAKEUP</p>
              </div>
-              
+             <span id="Bottone-finale"><input type="submit" value="Inizio la prova gratuita"></span>
+
+             <footer>
+                <div id="Conteiner-banner">
+                    <div id="Sinistra"></div>
+                    <div id="Destra"></div>
+                </div>      
+                <div id="Termini-info"></div>
+             </footer>
         </div>
     </main>
 </body>
